AM_CPPFLAGS = -DDATADIR='"$(datadir)"'

pkgincludedir      = @prefix@/include/Lgm
pkginclude_HEADERS =        Lgm_CTrans.h Lgm_Eop.h Lgm_FieldIntInfo.h Lgm_IGRF.h Lgm_LeapSeconds.h Lgm_LstarInfo.h \
                            Lgm_MagModelInfo.h Lgm_Octree.h Lgm_QuadPack.h Lgm_Quat.h Lgm_Sgp.h Lgm_Vec.h Lgm_WGS84.h  \
                            Lgm_MagEphemInfo.h Lgm_AE8_AP8.h Lgm_DynamicMemory.h Lgm_FluxToPsd.h
